# TranslatorDesign

./: .gitignore  CMakeLists.txt  Makefile  MakefileLexer  README.md  cmm_driver.cpp  cmm_driver.hpp  cmm_lexer.l  cmm_parser.yy  lex.yy.c  lexer.l  main.cpp  mock_tokens.hh  parser.y  scanner.cpp  scanner.h  test.cpp
AST/: function.hpp  function_list.hpp  parameter_list.hpp  parameters_list.hpp  program.hpp  statement_list.hpp  statements_list.hpp  tree.hpp  variable.hpp
AST/base/: base_expression.hpp  base_statement.hpp
AST/declaration/: variable_declaration.hpp
AST/declarations/: declaration_block.hpp  function_declaration.hpp  variable_declaration.hpp
AST/expression/: assign_expression.hpp  callable_expression.hpp  constant_expression.hpp  operation_expression.hpp
AST/helpers/: helpers.hpp
AST/statement/: conditional_statement.hpp  empty_statement.hpp  expression_statement.hpp  iteration_statement.hpp  return_statement.hpp  statements_block.hpp  statements_list.hpp
C_Implementation/: Makefile  README.md
C_Implementation/src/: lexer.l  test.cpp
C_Implementation/src/ast/: ast.c  ast.h
C_Implementation/src/lexer/: Makefile  lexer.l  main.c  main.h  mock_tokens.hh
C_Implementation/src/parser/: Makefile  main.c  main.h  (+1 more)
Testing_module/: test.cpp
Testing_module/helpers/: helpers.cpp  helpers.hpp
old/: lex.yy.c  lexer.l  scanner.l
src/: main.cpp
src/driver/: cmm_driver.cpp  cmm_driver.hpp
src/input_parser/: cmm_input_parser.cpp  cmm_input_parser.hpp
src/parser/: cmm_parser.yy
src/scanner/: cmm_lexer.l  cmm_scanner.hpp  cmm_tokens.hh
(+13 files in other folders)
